slowly cleaning up the minor bugs introduced by the big rewrite